<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fhSwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fhTopBarLogoIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/am_topbar_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/fhTopBarAppTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/primaryWhite"
                app:layout_constraintStart_toEndOf="@id/fhTopBarLogoIV"
                app:layout_constraintTop_toTopOf="@id/fhTopBarLogoIV"
                app:layout_constraintBottom_toBottomOf="@id/fhTopBarLogoIV"/>

            <TextView
                android:id="@+id/fhMixingGroupTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mixing"
                android:layout_marginTop="30dp"
                style="@style/FH_TracksGroupTitleTVStyle"
                app:layout_constraintTop_toBottomOf="@id/fhTopBarLogoIV"
                app:layout_constraintStart_toStartOf="@id/fhTopBarLogoIV"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhMixingTracksContainerRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fhMixingGroupTitleTV"/>


            <TextView
                android:id="@+id/fhQuickPicksGroupTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_picks"
                android:layout_marginTop="40dp"
                style="@style/FH_TracksGroupTitleTVStyle"
                app:layout_constraintTop_toBottomOf="@id/fhMixingTracksContainerRV"
                app:layout_constraintStart_toStartOf="@id/fhTopBarLogoIV"/>

            <TextView
                android:id="@+id/fhPlayQuickPicksGroupBtnIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TransparentButtonStyle"
                android:text="@string/play_all"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/fhQuickPicksGroupTitleTV"
                app:layout_constraintBottom_toBottomOf="@id/fhQuickPicksGroupTitleTV"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhQuickPicksTracksContainerRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fhQuickPicksGroupTitleTV"/>


            <TextView
                android:id="@+id/fhRandomPicksGroupTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_picks"
                android:layout_marginTop="40dp"
                style="@style/FH_TracksGroupTitleTVStyle"
                app:layout_constraintTop_toBottomOf="@id/fhQuickPicksTracksContainerRV"
                app:layout_constraintStart_toStartOf="@id/fhTopBarLogoIV"/>

            <TextView
                android:id="@+id/fhPlayRandomPicksGroupBtnIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TransparentButtonStyle"
                android:text="@string/play_all"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/fhRandomPicksGroupTitleTV"
                app:layout_constraintBottom_toBottomOf="@id/fhRandomPicksGroupTitleTV"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhRandomPicksTracksContainerRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fhRandomPicksGroupTitleTV"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>